fix/overlap
fixed an issue regarding elements overlapping the navbar

--- a/construction-template/src/components/Navbar/Navbar.scss
+++ b/construction-template/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(0, 0, 0, 0.18);
     position: fixed;
+    z-index: 4;
 
     h2 {
         text-align: center;
